[package]
name = "extended-euclidean-algorithm"
version = "0.1.1"
edition = "2021"
description = "This library computes the greatest common divisor of 2 natural numbers and 2 additional numbers such that gcd(a,b)=s·a+t·b holds."
license = "MIT"
repository = "https://github.com/BiliqisO/moon-math/tree/extended-euclidean-algorithm"
keywords = ["rust", "gcd", "eea", "extended-euclidean", "moon-mathematics"] 

[lib]
name = "mathematics"
path = "src/lib.rs" 

[dependencies]
